@@ -794,5 +794,17 @@
  drawTrafficDirectionMarks="no">
   <selector expr="[amenity] isoneof (bank , bank;atm)"/>
 </painter>
+<painter
+ zoomUnder="0.142857" zoomUpper="1e+07"
+ icon=":/MapIcons/map-icons/square.small/misc/information.png"
+ drawTrafficDirectionMarks="no">
+  <selector expr="Type is TrackPoint and HasTags"/>
+</painter>
+<painter
+ zoomUnder="0.142857" zoomUpper="1e+07"
+ icon=":/MapIcons/map-icons/square.small/unknown.png"
+ drawTrafficDirectionMarks="no">
+  <selector expr="Type is TrackPoint"/>
+</painter>
 
 </mapStyle>
